# NCL

./: # Code Citations.md  .build-progress.json  .cmsg.txt  .commit-msg-temp.txt  .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT_ARCHITECTURE_SPECIFICATION.md  API_SETUP_NEW_ACCOUNTS_GUIDE.md  AUDIT_full.md  AUDIT_gaps_250.md  BACKLOG_UPDATE_MEMORY_DOCTRINE.md  BUILD_SUMMARY.md  CARRY_FORWARD_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  COMMAND_CENTER_README.md  COMPLETE_IMPLEMENTATION_REPORT.md  CONTEXT.md  CONTRIBUTING.md  CPU_MAXIMIZER_README.md  DAILY_OPS.bat  DEPARTMENTAL_RESTRUCTURING_REPORT.md  DEPLOYMENT_SUMMARY.md  DEVELOPING.md  DISTRIBUTED_COMMAND_CENTER_SETUP.md  DOCTRINE_COUNCIL_52.md  Dockerfile  GO_LIVE_ANNOUNCEMENT.md  GO_LIVE_STATUS.md  ICM_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  INCIDENT_LOG.md  INDEX.md  INNER_COUNCIL_SETUP_GUIDE.md  LIVE_PORTFOLIO_DEMO.py  LOCAL_DEV_PLAN.md  (+271 more)
.github/: copilot-instructions.md
NCC/: MEMORY_STATE_20260220.md  README.md  cio_intelligence_leadership.py  ncc_orchestrator.py
NCL/: events.ndjson
ResonanceEnergy_SuperAgency/: portfolio.json  portfolio.yaml
_config/: CONVENTIONS.md  topics_registry.json
_core/: CONVENTIONS.md
_test_sub_audio/: test_sub.srt
agents/: ceo_agent.py  cfo_agent.py  cio_agent.py  cmo_agent.py  common.py  council.py  cto_agent.py  daily_brief.py  executive_council_orchestrator.py  integrate_cell.py  orchestrator.py  repo_sentry.py
az_decisions/: decision_1b38f38b08ca2bf4.json  decision_df263bb5920040d3.json
backups/: BACKUP_MANIFEST_20260220_180000.txt  SESSION_MEMORY_CAPTURE_20260220_180000.md  SUPER_AGENCY_DOCTRINE_MEMORY_20260220_180000.md  backup_log_20260221_174213.txt
cicd_workflows/: DEPLOYMENT_GUIDE.md
companies/: README.md
config/: com.resonanceenergy.ncl-councils.plist  com.resonanceenergy.ncl-logrotate.plist  com.resonanceenergy.ncl-orchestrator.plist  github_config.json  ncc_config.json  ncl.yaml  schedule.json  sensitivity.json  services.json  settings.json  youtube_channels.json
dashboard/: command-center.html  index.html  lde.html  memory.html  review-queue.html  workstation.html
dashboard_data/: ncl_dashboard_1771726214.json  ncl_dashboard_1771726240.json  ncl_dashboard_1771726265.json  ncl_dashboard_1771729660.json  ncl_dashboard_1771730176.json  ncl_dashboard_1771730202.json
decisions/: decision_demo_56a5a047-106f-4766-92d7-b0e13a49925b.json  decision_demo_69b87a4c-5a22-4ee2-9a47-0125c8067ce2.json
docs/: 2100_HARDENING_PACK.md  AGENDA_MANDATE.md  ARCHITECTURE.md  AUTO_TRADER_AGENT_2026-05-26.md  AUTO_TRADER_MANDATE.md  AUTO_TRADER_RESEARCH_2026-05-27.md  AWAREBOT_MANDATE.md  BOT_SETUP.md  BRIEF_MANDATE.md  CALENDAR_MANDATE.md  CAPITAL_ROTATION_2026-05-26.md  COUNCIL_ARCHITECTURE.md  COUNCIL_CONTEXT_ASSEMBLER.md  CREATOR_DOCTRINE.md  CROSS_REFERENCE_MANDATE.md  Cell_NCC-Doctrine_Report.md  DEPENDENCIES.md  DESKTOP_OPTIONS_2026-05-25.md  DEVELOPER_GUIDE.md  FOCUS_MANDATE.md  FULL_SYSTEM_AUDIT_2026-05-28.md  GITHUB_ISSUES_NCL_FIRST.md  INTEGRATION_DESIGN.md  INTEL_ARCH_DEEP_DIVE_2026-05-28.md  INTEL_MANDATE.md  INTEL_MEMORY_REORG_2026-05-25.md  IPHONE_SETUP_GUIDE.md  JOURNAL_MANDATE.md  JOURNAL_REDESIGN_2026-05-25.md  LANE_ARCHITECTURE_2026-05-28.md  MEMORY_MANDATE.md  MORNING_BRIEF_PRO_2026-05-26.md  MORNING_BRIEF_QUALITY_2026-05-25.md  NIGHTWATCH_MANDATE.md  PERFORMANCE_PLAN.md  PERSISTENCE.md  PORTFOLIO_MANAGER_AUDIT_2026-05-26.md  RISK_ASSESSMENT.md  SECRETS.md  STRATEGIC_DOCTRINE.md  (+1 more)
doctrine/: compliance_audit.json  doctrine_core.yaml
evaluation/: GOLDEN_TASK_INTEGRATION.md  GOLDEN_TASK_INTEGRATION_COMPLETE.md
examples/: chat_memory_example.py
feedback-synthesis/: LOG.md  SCHEMA.md
fractal_future/: README.md
future_predictor_council/: Makefile  README.md  pyproject.toml
future_predictor_council/backlog/: BACKLOG_PALANTIR_EMULATION.md
future_predictor_council/bootcamp/: Day1_scope.md  Day2_build.md  Day3_eval.md  Day4_deploy.md
future_predictor_council/bootcamp/demo_scenario/: scenario_config.yaml
future_predictor_council/data/raw/: example.csv
future_predictor_council/docs/: COMPUTE_PROFILE.md  FOUNDATION_REMOTE.md  XAI_GUIDE.md
future_predictor_council/doctrine/: DOCTRINE_PALANTIR_EMULATION.md  FUTURE_PREDICTOR_DOCTRINE.md
future_predictor_council/scripts/: create_issues.sh
future_predictor_council/src/: __init__.py  ai_daily_brief.py  ai_upload_intelligence.py  cli.py  council_orchestrator.py  data_sources.py  explainability.py  flywheel_feed.py  github_intelligence.py  google_trends_intelligence.py  ingestion.py  instagram_intelligence.py  main.py  prediction_feedback_loop.py  reddit_intelligence.py  reports.py  resonance_triad.py  second_brain.py  substack_intelligence.py  tiktok_intelligence.py  topics_registry.py  tracker.py  x_intelligence.py  youtube_intelligence.py
future_predictor_council/src/agents/: __init__.py  burst.py  events.py  expansion.py  live.py  orchestrator.py  policy.py  router.py  stubs.py
future_predictor_council/src/causal/: econml_panel.py
future_predictor_council/src/council/: strategy_prophet.py
future_predictor_council/src/eval/: __init__.py
future_predictor_council/src/serve/: __init__.py
future_predictor_council/src/xai/: __init__.py  shap_panel.py
future_predictor_council/tests/: test_agent_framework.py  test_council_integration.py  test_smoke.py
github_integration/: .gitignore  GITHUB_AUTH_SETUP_GUIDE.md  GITHUB_INTEGRATION_GUIDE.md  SETUP_COMPLETE.md  SETUP_STATUS.md  auto_sync.ps1  autonomous_sync.bat  direct_test.py  env_test.py  github_integration_system.py  manual_setup.py  manual_test.bat  manual_test.ps1  quick_test.py  requirements.txt  run_github_integration.bat  run_github_integration.sh  scheduled_sync.ps1  setup_auth.py  setup_github_integration.py  test_auth.bat  test_auth.ps1  test_env.bat  test_system.py
infrastructure/: main.tf  variables.tf
inner_council/: README.md  council.py  deploy_agents.py  generate_agents.py  integration_demo.py  meta_coordinator.py  swarm_intelligence.py  test_agents.py  test_system.py
(+2304 files in other folders)
