[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncl-brain"
version = "1.0.0"
description = "RESONANCE ENERGY NCL Brain Service - Think, Research, Plan, Decide"
readme = "README.md"
requires-python = ">=3.12"
license = "Proprietary"
authors = [
    { name = "NATRIX", email = "admin@resonance-energy.ai" }
]
keywords = ["ncl", "brain", "ai", "reasoning", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS 15",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.dependencies]
fastapi = "^0.104.0"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
httpx = "^0.25.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0"
aiofiles = "^23.2.0"
websockets = "^12.0"
sentence-transformers = "^2.2.2"
numpy = "^1.26.0"
openai = "^1.3.0"
google-generativeai = "^0.3.0"
requests = "^2.31.0"
praw = "^7.7.0"
tweepy = "^4.14.0"
python-json-logger = "^2.0.7"
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"

[project.optional-dependencies]
councils = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.25.0",
    "twscrape>=0.12.0",
    "aiohttp>=3.9.0",
]
councils-mlx = [
    "mlx-whisper>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

[project.scripts]
ncl = "runtime.api.routes:main"
ncl-councils = "runtime.councils.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N"]

[tool.ruff.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
)/
'''
