[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncl-brain"
version = "1.0.0"
description = "RESONANCE ENERGY NCL Brain Service - Think, Research, Plan, Decide"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    { name = "NATRIX", email = "admin@resonance-energy.ai" }
]
keywords = ["ncl", "brain", "ai", "reasoning", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx~=0.27.0",
    "pydantic~=2.9",
    "pydantic-settings~=2.5",
    "pyyaml~=6.0",
    "aiofiles~=24.1.0",
    "websockets~=13.0",
    "numpy~=1.26.0",
    "networkx>=3.0",
    "openai~=1.51.0",
    "google-generativeai~=0.8.0",
    "requests~=2.32.0",
    "praw~=7.7.0",
    "tweepy~=4.14.0",
    "python-json-logger~=2.0.7",
    "tenacity~=9.0.0",
    "python-dotenv~=1.0.0",
    "slowapi~=0.1.9",
    "aiohttp~=3.10.0",
    "mcp~=1.0.0",
]

[project.optional-dependencies]
councils = [
    "yt-dlp~=2024.10.0",
    "faster-whisper~=1.0.0",
    "twscrape~=0.12.0",
    "trafilatura~=1.12.0",
    "newspaper3k~=0.2.8",
    "google-api-python-client>=2.0",
    "youtube-transcript-api>=0.6",
]
councils-mlx = [
    "mlx-whisper>=0.1.0",
]
vector = [
    "chromadb~=0.5.0",
    "lancedb>=0.4.0",
    "sentence-transformers~=3.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

[project.scripts]
ncl = "runtime.api.routes:main"
ncl-councils = "runtime.councils.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["runtime"]
lines-after-imports = 2

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
)/
'''
