[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "future-predictor-council"
version = "0.3.0"
description = "Local-first forecasting platform with model council, XAI, causal what-ifs, foundation-model burst, and LLM council orchestration"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib",
    "seaborn",
    "pyarrow",
    "scikit-learn",
    "statsforecast>=2.0.0",
    "holidays",
    "plotly",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
neural = [
    "neuralforecast>=3.1.0",
    "darts>=0.41.0",
]
prophet = [
    "prophet>=1.1",
]
xai = [
    "shap",
]
causal = [
    "dowhy",
    "econml",
]
foundation = [
    "timesfm>=1.3.0",
    "chronos-forecasting",
    "torch",
]
agents = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "tenacity",
    "pydantic>=2.0",
    "python-dotenv",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "httpx",
    "tabulate",
]
all = [
    "future-predictor-council[neural,prophet,xai,causal,foundation,agents,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
